[tool.poetry]
name = "logiskip"
version = "0.1.0"
description = "Logical database migration between RDBMSs"
authors = ["Dominik George <dominik.george@credativ.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.5"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
