[tool.poetry]
name = "logiskip"
version = "0.1.0"
description = "Logical database migration between RDBMSs"
authors = ["Dominik George <dominik.george@credativ.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.5"
click = "^7.1.2"
semantic-version = "^2.8.5"
PyMySQL = {version = "^1.0.2", optional = true}
pg8000 = {version = "^1.19.1", optional = true}

[tool.poetry.extras]
mysql = ["PyMySQL"]
postgres = ["pg8000"]

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
logiskip = 'logiskip.cli:logiskip'

[tool.poetry.plugins."logiskip.load"]
roundcube = "logiskip.loads.roundcube"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
